--- a/public/style.css
+++ b/public/style.css
@@ -4,8 +4,8 @@
 }
 h1 {
     text-align: center;
-    background-color: rgb(57, 100, 168);
-    color: rgb(192, 36, 36);
+    background-color: rgb(97, 181, 236);
+    color: rgb(255, 255, 255);
     font-size: 5vw;
 }
 form {
@@ -32,7 +32,7 @@ input
 button
 {
     border-radius:0 5vw 5vw 0;
-    background: #ccc;
+    background: rgb(172, 172, 172);
 }
 #chats
 {
@@ -41,7 +41,7 @@ button
 #chats dt
 {
     margin: 2vw 0;
-    border:1px solid #333;
+    border:1px solid rgb(19, 19, 19);
     border-radius:3vw;
     padding:1vw 3vw;
     display: inline-block;
@@ -50,7 +50,7 @@ button
 {
     margin-left: 8vw;
     position: relative;
-    background-color:#ccc;
+    background-color:rgb(99, 99, 99);
     border-radius:3vw;
     padding:1vw 3vw;
 }
