--- a/public/style.css
+++ b/public/style.css
@@ -15,6 +15,9 @@ form {
     display: none;
 }
 input,
+body {
+    background-color: rgb(130, 194, 219);
+  }
 button
 {
     border:1px solid rgb(216, 176, 117);
