--- a/public/style.css
+++ b/public/style.css
@@ -4,8 +4,8 @@
 }
 h1 {
     text-align: center;
-    background-color: rgb(45, 87, 155);
-    color: #fff;
+    background-color: rgb(216, 176, 117);
+    color: rgb(216, 176, 117);
     font-size: 5vw;
 }
 form {
@@ -15,9 +15,12 @@ form {
     display: none;
 }
 input,
+body {
+    background-color: rgb(208, 241, 253);
+  }
 button
 {
-    border:1px solid #ccc;
+    border:1px solid rgb(216, 176, 117);
     font-size:5vw;
     height:10vw;
     padding:0 5vw;
@@ -32,7 +35,7 @@ input
 button
 {
     border-radius:0 5vw 5vw 0;
-    background: #ccc;
+    background: rgb(216, 176, 117);
 }
 #chats
 {
@@ -41,7 +44,7 @@ button
 #chats dt
 {
     margin: 2vw 0;
-    border:1px solid #333;
+    border:1px solid rgb(216, 176, 117);
     border-radius:3vw;
     padding:1vw 3vw;
     display: inline-block;
@@ -50,7 +53,7 @@ button
 {
     margin-left: 8vw;
     position: relative;
-    background-color:#ccc;
+    background-color:rgb(216, 176, 117);
     border-radius:3vw;
     padding:1vw 3vw;
 }
@@ -63,7 +66,7 @@ button
     left: -6vw;
     margin-top: -7vw;
     border: 3vw solid transparent;
-    border-right: 8vw solid #ccc;
+    border-right: 8vw solid rgb(216, 176, 117);
     transform: rotate(40deg);
     z-index: -1;
 }
