--- a/public/style.css
+++ b/public/style.css
@@ -66,7 +66,7 @@ button
     left: -6vw;
     margin-top: -7vw;
     border: 3vw solid transparent;
-    border-right: 8vw solid rgb(216, 176, 117);
+    border-right: 8vw solid rgba(216, 176, 117, 0.788);
     transform: rotate(40deg);
     z-index: -1;
 }
