--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,10 @@ h1 {
     color: #fff;
     font-size: 5vw;
 }
+body {
+    background-color: rgb(208, 241, 253);
+  }
+
 form {
     display: flex;
 }
